--- a/calculator/package.json
+++ b/calculator/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Redocer-kl.github.io/calculator",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "babel-preset-gatsby": "^3.13.2"
+    "babel-preset-gatsby": "^3.13.2",
+    "gh-pages": "^6.1.1"
   }
 }
